--- a/README
+++ b/README
@@ -3,3 +3,7 @@ Code is MIT-licensed.
 Idea shamelessly stolen from:
 
 http://rogeralsing.com/2008/12/07/genetic-programming-evolution-of-mona-lisa/
+
+To run:
+
+$ ruby -rubygems ga-polygons.rb <target image>
