--- a/README
+++ b/README
@@ -4,6 +4,9 @@ Idea shamelessly stolen from:
 
 http://rogeralsing.com/2008/12/07/genetic-programming-evolution-of-mona-lisa/
 
+Prerequisite: OpenGL
+$ sudo gem install ruby-opengl
+
 To run:
 
 $ ruby -rubygems ga-polygons.rb <target image>
